--- a/EnglishForKids.API/appsettings.json
+++ b/EnglishForKids.API/appsettings.json
@@ -27,18 +27,21 @@
         "ArticleRelated": "article_related_biolife_store",
         "LocationProduct": "location_product_biolife_store",
         "AccountApi": "account_api_biolife_store",
-        "SpGetArticle": "es_biolife_sp_get_article"
+        "SpGetArticle": "es_biolife_sp_getallarticle",
+        "SP_GetAllSource": "education_sp_get_source"
+
       }
     }
 
   },
   "Redis": {
-    "Host": "103.163.216.42",
+    "Host": "103.163.216.41",
     "Port": "6666",
     "Database": {
       "db_common": 6, // db node common        
       "db_search_result": 7, // db node common        
-      "db_article": 5
+      "db_article": 5,
+      "db_course": 13
     }
   },
   "telegram": {
