--- a/EnglishForKids.API/appsettings.json
+++ b/EnglishForKids.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=103.163.216.41;Initial Catalog=educationDb;Persist Security Info=True;User ID=us;Password=us@585668;TrustServerCertificate=True"
+  },
 
   "DataBaseConfig": {
     "MongoServer": {
